@@ -1,24 +1,28 @@
 package school.faang.user_service.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Component;
+import org.springframework.stereotype.Service;
 import school.faang.user_service.dto.SkillCandidateDto;
 import school.faang.user_service.dto.SkillDto;
+import school.faang.user_service.mapper.SkillCandidateMapper;
 import school.faang.user_service.entity.recommendation.SkillOffer;
 import school.faang.user_service.exception.DataValidationException;
-import school.faang.user_service.mapper.SkillCandidateMapper;
 import school.faang.user_service.mapper.SkillMapper;
 import school.faang.user_service.repository.SkillRepository;
+import school.faang.user_service.validator.SkillValidator;
 import school.faang.user_service.repository.UserSkillGuaranteeRepository;
 import school.faang.user_service.repository.recommendation.SkillOfferRepository;
 
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Service
 @RequiredArgsConstructor
-@Component
 public class SkillService {
     private final SkillRepository skillRepository;
+    private final SkillMapper skillMapper;
+    private final SkillValidator skillValidator;
+
     private final SkillOfferRepository skillOfferRepository;
     private final UserSkillGuaranteeRepository userSkillGuaranteeRepository;
     private final SkillCandidateMapper skillCandidateMapper;
@@ -26,8 +30,9 @@ public class SkillService {
     private final int MIN_SKILL_OFFERS = 3;
 
     public SkillDto create(SkillDto skill) {
-        validateSkill(skill);
-        return skillMapper.toDto(skillRepository.save(skillMapper.toEntity(skill)));
+        skillValidator.validateSkill(skill);
+        Skill convertedSkill = skillMapper.toEntity(skill);
+        return skillMapper.toDto(skillRepository.save(convertedSkill));
     }
 
     public List<SkillDto> getUserSkills(long userId) {
@@ -38,7 +43,7 @@ public class SkillService {
         return skillRepository.findSkillsOfferedToUser(userId).stream()
                 .collect(Collectors.groupingBy(skill -> skill, Collectors.counting()))
                 .entrySet().stream()
-                .map(entry -> skillCandidateMapper.toDto(entry.getKey(), entry.getValue())).collect(Collectors.toList());
+                .map(entry -> skillCandidateMapper.toDto(entry.getKey(), entry.getValue())).toList();
     }
 
     public SkillDto acquireSkillFromOffers(long skillId, long userId) {
@@ -53,19 +58,4 @@ public class SkillService {
         }
         return skillMapper.toDto(skillRepository.getSkillById(skillId));
     }
-
-    private void validateSkill(SkillDto skill) {
-        if (skill.getTitle().isBlank() || skill.getTitle() == null) {
-            throw new DataValidationException("title doesn't exist");
-        }
-        if (skillRepository.existsByTitle(skill.getTitle())) {
-            throw new DataValidationException(skill.getTitle() + " already exist");
-        }
     }
-
-    private void validateSkill(long skillId, long userId) {
-        if (skillRepository.findUserSkill(skillId, userId) != null) {
-            throw new DataValidationException("this skill with id " + skillId + " already exist");
-        }
-    }
-}
